--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" type="text/css" href="css/style_1.css" media="screen, projection">
     <link rel="canonical" href="https://Man Erection.kz">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Купить препарат Flex Balance для суставов | Man Erection.kz </title>
-    <meta content="Купите [ препарат Flex Balance] ⚡️Man Erection.kz⚡️Отличное средство для суставов ⚡️Супер цена✈️ Доставка по всему Казахстану  ⭐Отзывы " name="description">
+    <title>Купить препарат Man Erection | Man Erection.kz </title>
     <meta content="" name="keywords">
-    <meta content="Flex Balance" name="title">
+    <meta content="Man Erection" name="title">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="css/jquery.mCustomScrollbar.css" rel="stylesheet" media="print" onload="this.media='all'">
